Subo pagina de entidades educativas. Fixeo algunos bugs

--- a/app/views/main.html
+++ b/app/views/main.html
@@ -10,7 +10,7 @@
           </div>
           <div class="search-container">
             <div class="search">
-              <form class="form-inline" action="#" ng-submit="searchDocument()">
+              <form class="form-inline" action="#" ng-submit="searchDocument($event)">
                 <div class="input-group">
                   <div class="input-cont">
                     <input class="form-control" type="text" placeholder="{{'home.search_placeholder' | translate}}"
