--- a/app/styles/main.css
+++ b/app/styles/main.css
@@ -305,7 +305,7 @@ form .error {
 
 /* BEGIN SEARCH */
 
-#search #headerSearch {
+#headerSearch {
   background-image: url('../images/banners/banner.png');
   width: 100%;
   color: #fff;
@@ -478,5 +478,156 @@ form .error {
   color: #444;
 }
 
+#contentSearch .search-result .fa-tags-text{
+  text-decoration: none;
+  padding: 0;
+  color: #555;
+  width: auto;
+}
 
 /* END SEARCH */
+/* BEGIN ENTITY */
+#entity #headerEntity{
+  width: 100%;
+  color: #fff;
+  background-size: cover;
+  justify-content: center;
+  min-height: 330px;
+  margin-bottom: 20px;
+}
+#entity #headerEntity.image-1 {
+  background-image: url('../images/banners/entities/entity_1.jpg');
+}
+#entity #headerEntity.image-2 {
+  background-image: url('../images/banners/entities/entity_2.jpg');
+}
+#entity #headerEntity.image-3 {
+  background-image: url('../images/banners/entities/entity_3.jpg');
+}
+#entity #headerEntity.image-4 {
+  background-image: url('../images/banners/entities/entity_4.jpg');
+}
+#entity #headerEntity.image-5 {
+  background-image: url('../images/banners/entities/entity_5.jpg');
+}
+#entity #headerEntity.image-6 {
+  background-image: url('../images/banners/entities/entity_6.jpg');
+}
+
+#entity #headerEntity .title{
+  font-size: 40px;
+  margin-top: 200px;
+  font-weight: bolder;
+  text-shadow: 1px 1px #62707f;
+}
+
+#entity #headerSearch .search-container {
+  margin-top: 50px;
+  position: relative;
+  text-align: center;
+  padding-left: 30px;
+  padding-right: 30px;
+  padding-bottom: 50px;
+}
+#entity #headerSearch .search-container .text{
+  text-align: center;
+  font-size: 24px;
+  width: 100%;
+  margin-bottom: 15px;
+}
+#entity #content{
+  margin-top: 20px;
+}
+#entity #content .first-title {
+  font-size:26px;
+}
+
+#entity #content .description{
+  color: #656565;
+  font-size: 14px;
+}
+#entity .search-result {
+  padding-top: 10px;
+}
+
+#entity .search-result .item-result {
+  margin-bottom: 20px;
+  width: 100%;
+  border-bottom: 1px solid #E0DFDF;
+  padding-bottom: 15px;
+}
+
+#entity .search-result .item-result .image {
+  overflow: hidden;
+}
+
+#entity .search-result .item-result .image img {
+}
+
+#entity .search-result .item-result .title {
+  color: #444;
+  font-size: 21px;
+  line-height: 25px;
+  font-weight: 400;
+  margin-bottom: 0px;
+  display: inline-block;
+  margin-top: 8px;
+}
+
+#entity .search-result .item-result .description {
+  color: #444;
+  font-size: 14px;
+  line-height: 18px;
+  font-weight: 400;
+  margin-bottom: 0px;
+  display: inline-block;
+  margin-top: 2px;
+}
+
+#entity .search-result .item-result .button-document-detail {
+  margin-top: 10px;
+}
+#entity .search-result .without-documents {
+  font-size: 18px;
+  padding: 10px;
+  color: #444;
+}
+
+#entity .search-result .fa-tags-text{
+  text-decoration: none;
+  padding: 0;
+  color: #555;
+  width: auto;
+}
+
+#entity #headerSearch{
+  margin-top: 50px;
+  margin-bottom: 0px;
+}
+
+
+/*#subject #headerSubject.engineering {
+  background-image: url('../images/banners/subjects/banner_engineering.jpg');
+}
+#subject #headerSubject.biology {
+  background-image: url('../images/banners/subjects/banner_biology.jpg');
+}
+#subject #headerSubject.computer {
+  background-image: url('../images/banners/subjects/banner_computer.jpg');
+}
+#subject #headerSubject.economy {
+  background-image: url('../images/banners/subjects/banner_economy.jpg');
+}
+#subject #headerSubject.finance {
+  background-image: url('../images/banners/subjects/banner_finance.jpg');
+}
+#subject #headerSubject.history {
+  background-image: url('../images/banners/subjects/banner_history.jpg');
+}
+#subject #headerSubject.language {
+  background-image: url('../images/banners/subjects/banner_language.jpg');
+}
+#subject #headerSubject.management {
+  background-image: url('../images/banners/subjects/banner_management.jpg');
+}
+*/
