--- a/app/styles/main.css
+++ b/app/styles/main.css
@@ -486,6 +486,7 @@ form .error {
 }
 
 /* END SEARCH */
+
 /* BEGIN ENTITY */
 #entity #headerEntity{
   width: 100%;
@@ -605,8 +606,18 @@ form .error {
   margin-bottom: 0px;
 }
 
+/* END ENTITY */
 
-/*#subject #headerSubject.engineering {
+/* BEGIN SUBJECT */
+#subject #headerSubject{
+  width: 100%;
+  color: #fff;
+  background-size: cover;
+  justify-content: center;
+  min-height: 330px;
+  margin-bottom: 20px;
+}
+#subject #headerSubject.engineering {
   background-image: url('../images/banners/subjects/banner_engineering.jpg');
 }
 #subject #headerSubject.biology {
@@ -630,4 +641,85 @@ form .error {
 #subject #headerSubject.management {
   background-image: url('../images/banners/subjects/banner_management.jpg');
 }
-*/
+#subject #headerSubject .title{
+  font-size: 40px;
+  margin-top: 200px;
+  font-weight: bolder;
+  text-shadow: 1px 1px #62707f;
+}
+
+#subject #headerSearch .search-container {
+  margin-top: 50px;
+  position: relative;
+  text-align: center;
+  padding-left: 30px;
+  padding-right: 30px;
+  padding-bottom: 50px;
+}
+#subject #headerSearch .search-container .text{
+  text-align: center;
+  font-size: 24px;
+  width: 100%;
+  margin-bottom: 15px;
+}
+#subject .search-result {
+  padding-top: 10px;
+}
+
+#subject .search-result .item-result {
+  margin-bottom: 20px;
+  width: 100%;
+  border-bottom: 1px solid #E0DFDF;
+  padding-bottom: 15px;
+}
+
+#subject .search-result .item-result .image {
+  overflow: hidden;
+}
+
+#subject .search-result .item-result .image img {
+}
+
+#subject .search-result .item-result .title {
+  color: #444;
+  font-size: 21px;
+  line-height: 25px;
+  font-weight: 400;
+  margin-bottom: 0px;
+  display: inline-block;
+  margin-top: 8px;
+}
+
+#subject .search-result .item-result .description {
+  color: #444;
+  font-size: 14px;
+  line-height: 18px;
+  font-weight: 400;
+  margin-bottom: 0px;
+  display: inline-block;
+  margin-top: 2px;
+}
+
+#subject .search-result .item-result .button-document-detail {
+  margin-top: 10px;
+}
+#subject .search-result .without-documents {
+  font-size: 18px;
+  padding: 10px;
+  color: #444;
+}
+
+#subject .search-result .fa-tags-text{
+  text-decoration: none;
+  padding: 0;
+  color: #555;
+  width: auto;
+}
+
+#subject #headerSearch{
+  margin-top: 50px;
+  margin-bottom: 0px;
+}
+
+/* END SUBJECT */
+
