--- a/app/views/entity.html
+++ b/app/views/entity.html
@@ -36,24 +36,8 @@
       <div class="row">
         <div class="col-md-12">
           <div class="search-result">
-            <div class="item-result row" ng-repeat="(key, document) in documents">
-              <div class="col-md-12 col-sm-12">
-                <div class="title">{{document.nombre}}</div>
-                <ul class="blog-info">
-                  <li><i class="fa fa-calendar"></i>{{document.fechaCreacion}}</li>
-                  <li><i class="fa fa-comments"></i> 2</li>
-                  <li><i class="fa fa-tags"></i>
-                    <a href="#/entity/{{document.entidad.id}}" class="fa-tags-text">{{document.entidad.nombreCorto}}</a>,
-                    {{document.materia.nombre}},
-                    {{document.idioma.nombre}}
-                  </li>
-                </ul>
-                <div class="description">{{ document.descripcion }}</div>
-                <br/>
-                <a href="#">
-                  <button class="btn green button-document-detail">Ver detalle</button>
-                </a>
-              </div>
+            <div class="row" ng-repeat="(key, document) in documents">
+              <document-item document="document"></document-item>
             </div>
             <div ng-if="documents.length == 0" class="filter without-documents">
               {{'search.without_documents' | translate }}
