Termino la descarga de documentos

--- a/app/views/documentEdit.html
+++ b/app/views/documentEdit.html
@@ -79,8 +79,8 @@
               <div class="form-group">
                 <label class="col-md-2 control-label">Archivo</label>
                 <div class="col-md-10">
-                  <input class="js-document-file" name="file" type="file">
-                  <p class="help-block">Debe pesar menos de 25mb.</p>
+                  <input class="js-document-file" name="file" type="file" accept=".pdf">
+                  <p class="help-block">El formato aceptado es pdf</p>
                 </div>
               </div>
               <div class="form-group">
