--- a/app/views/directives/documentItem.html
+++ b/app/views/directives/documentItem.html
@@ -12,4 +12,5 @@
   <div class="description">{{ document.descripcion }}</div>
   <br/>
   <button class="btn green button-document-detail" ng-disabled="!documentWithFile" ng-click="downloadDocument()">Descargar</button>
+  <div class="hide js-file"></div>
 </div>
