Agrego popup para feedback. Falta integracion

--- a/app/styles/main.css
+++ b/app/styles/main.css
@@ -800,3 +800,10 @@ form .error {
   margin-top: 10px;
 }
 /* END DIRECTIVE DOCUMENT LIST ITEM */
+
+/* BEGIN POPUP */
+#popup{}
+#popup{}
+#popup{}
+#popup{}
+/* END POPUP*/
