--- a/app/views/documentEdit.html
+++ b/app/views/documentEdit.html
@@ -39,8 +39,8 @@
                   <select class="form-control" ng-model="documentForm.entity">
                     <option ng-repeat="entity in entities" value="{{entity.id}}">{{entity.nombre}}</option>
                   </select>
-                  <span class="help-block">Si la entidad educativa no se encuentra en el listado puede solicitar agregarla desde <a
-                    href="#">aqui</a>.</span>
+                  <span class="help-block">Si la entidad educativa no se encuentra en el listado puede solicitar agregarla desde
+                    <span href="#" ng-click="showAlert($event)">aqui</span>.</span>
                 </div>
               </div>
               <div class="form-group">
