--- a/app/views/documentEdit.html
+++ b/app/views/documentEdit.html
@@ -3,7 +3,7 @@
     <div class="container">
       <div class="row">
         <div class="col-md-8">
-          <div class="title">Nuevo documento</div>
+          <div class="title">{{'edit_document.title_new' | translate}}</div>
         </div>
       </div>
     </div>
@@ -12,8 +12,8 @@
     <div class="container">
       <div class="row">
         <div class="col-md-12">
-          <h3>Nuevo documento</h3>
-          <p>Complete los siguientes datos para cargar el nuevo documento.</p>
+          <h3>{{'edit_document.title_new' | translate}}</h3>
+          <p>{{'edit_document.description_new' | translate}}</p>
         </div>
       </div>
       <div class="row">
@@ -21,52 +21,56 @@
           <form id="formDocument" class="form-horizontal" role="form" ng-submit="sendDocument()">
             <div class="form-body">
               <div class="form-group">
-                <label class="col-md-2 control-label">Nombre</label>
+                <label class="col-md-2 control-label">{{'edit_document.label_name' | translate}}</label>
                 <div class="col-md-10">
-                  <input ng-model="documentForm.name" type="text" class="form-control" placeholder="Ingrese un nombre"
+                  <input ng-model="documentForm.name" type="text" class="form-control" placeholder="{{'edit_document.placeholder_name' | translate}}"
                          ng-class="{'error': documentFormError.name}">
                 </div>
               </div>
               <div class="form-group">
-                <label class="col-md-2 control-label">Descripcion</label>
+                <label class="col-md-2 control-label">{{'edit_document.label_description' | translate}}</label>
                 <div class="col-md-10">
-                  <textarea ng-model="documentForm.description" class="form-control" rows="3"></textarea>
+                  <textarea ng-model="documentForm.description" class="form-control" placeholder="{{'edit_document.placeholder_description' | translate}}"></textarea>
                 </div>
               </div>
               <div class="form-group">
-                <label class="col-md-2 control-label">Entidad educativa</label>
+                <label class="col-md-2 control-label">{{'edit_document.label_entity' | translate}}</label>
                 <div class="col-md-10">
                   <select class="form-control" ng-model="documentForm.entity">
                     <option ng-repeat="entity in entities" value="{{entity.id}}">{{entity.nombre}}</option>
                   </select>
-                  <span class="help-block">Si la entidad educativa no se encuentra en el listado puede solicitar agregarla desde
-                    <span href="#" ng-click="showAlert($event)">aqui</span>.</span>
+                  <span class="help-block">{{'edit_document.help_entity' | translate}}
+                    <span ng-click="showFeedback('entity')" class="link-popup">{{'edit_document.feedback_here' | translate}}</span>.</span>
                 </div>
               </div>
               <div class="form-group">
-                <label class="col-md-2 control-label">Materia</label>
+                <label class="col-md-2 control-label">{{'edit_document.label_subject' | translate}}</label>
                 <div class="col-md-10">
                   <select class="form-control" ng-model="documentForm.subject">
                     <option ng-repeat="subject in subjects" value="{{subject.id}}">{{subject.nombre}}</option>
                   </select>
                   <span
-                    class="help-block">Si la materia no se encuentra en el listado puede solicitar agregarla desde <a
-                    href="#">aqui</a>.</span>
+                    class="help-block">{{'edit_document.help_subject' | translate}}
+                    <span ng-click="showFeedback('subject')" class="link-popup">{{'edit_document.feedback_here' | translate}}</span>.</span>
                 </div>
               </div>
               <div class="form-group">
-                <label class="col-md-2 control-label">Idioma</label>
+                <label class="col-md-2 control-label">{{'edit_document.label_language' | translate}}</label>
                 <div class="col-md-10">
                   <div class="radio-list">
                     <label ng-repeat="language in languages" class="radio-inline">
                       <input ng-model="documentForm.language" type="radio" name="languageOptions"
                              value="{{language.id}}"> {{language.nombre}}
                     </label>
+
                   </div>
+                  <span
+                    class="help-block">{{'edit_document.help_language' | translate}}
+                    <span ng-click="showFeedback('language')">{{'edit_document.feedback_here' | translate}}</span>.</span>
                 </div>
               </div>
               <div class="form-group">
-                <label class="col-md-2 control-label">Nivel</label>
+                <label class="col-md-2 control-label">{{'edit_document.label_level' | translate}}</label>
                 <div class="col-md-10">
                   <div class="radio-list">
                     <label ng-repeat="level in levels" class="radio-inline">
@@ -77,15 +81,15 @@
                 </div>
               </div>
               <div class="form-group">
-                <label class="col-md-2 control-label">Archivo</label>
+                <label class="col-md-2 control-label">{{'edit_document.label_file' | translate}}</label>
                 <div class="col-md-10">
                   <input class="js-document-file" name="file" type="file" accept=".pdf">
-                  <p class="help-block">El formato aceptado es pdf</p>
+                  <p class="help-block">{{'edit_document.help_file' | translate}}</p>
                 </div>
               </div>
               <div class="form-group">
                 <div class="col-md-12 text-center">
-                  <button type="submit" class="btn btn-lg green">Enviar</button>
+                  <button type="submit" class="btn btn-lg green">{{'edit_document.send' | translate}}</button>
                 </div>
               </div>
             </div>
