--- a/app/views/directives/documentItem.html
+++ b/app/views/directives/documentItem.html
@@ -1,5 +1,12 @@
 <div class="document-list-item col-md-12 col-sm-12">
   <div class="title">{{document.nombre}}</div>
+  <div class="score">
+    <input id="score5" type="radio" name="score" value="5" ng-click="sendScore(5)"><label for="score5">★</label>
+    <input id="score4" type="radio" name="score" value="4" ng-click="sendScore(4)"><label for="score4">★</label>
+    <input id="score3" type="radio" name="score" value="3" ng-click="sendScore(3)"><label for="score3">★</label>
+    <input id="score2" type="radio" name="score" value="2" ng-click="sendScore(2)"><label for="score2">★</label>
+    <input id="score1" type="radio" name="score" value="1" ng-click="sendScore(1)"><label for="score1">★</label>
+  </div>
   <ul class="blog-info">
     <li><i class="fa fa-calendar"></i>{{ document.fechaCreacion | date:'MM/dd/yyyy' }}</li>
     <li><i class="fa fa-comments"></i> 2</li>
@@ -8,9 +15,13 @@
       {{document.materia.nombre}},
       {{document.idioma.nombre}}
     </li>
+    <li ng-if="document.puntuacionCantidad >= 5"><i class="fa fa-star"></i> {{document.puntuacion}} ({{document.puntuacionCantidad}})</li>
+
   </ul>
   <div class="description">{{ document.descripcion }}</div>
   <br/>
-  <button class="btn green button-document-detail" ng-disabled="!documentWithFile" ng-click="downloadDocument()">Descargar</button>
+  <button class="btn green button-document-detail" ng-disabled="!documentWithFile" ng-click="downloadDocument()">
+    Descargar
+  </button>
   <div class="hide js-file"></div>
 </div>
