--- a/app/styles/main.css
+++ b/app/styles/main.css
@@ -808,6 +808,8 @@ form .error {
   display: inline-block;
   font-size: 16px;
   margin-left: 10px;
+  position: relative;
+  top:-3px;
 }
 
 .document-list-item .score label {
@@ -831,6 +833,17 @@ form .error {
 
 .document-list-item .score input[type = "radio"]:checked ~ label{color:orange;}
 
+
+.document-list-item .complaint {
+  display: inline-block;
+  position: relative;
+  top:-4px;
+  cursor: pointer;
+}
+.document-list-item .complaint img {
+  width: 22px;
+  height: 22px;
+}
 /* END DIRECTIVE DOCUMENT LIST ITEM */
 
 /* BEGIN POPUP */
@@ -844,4 +857,7 @@ form .error {
   height: 100px;
 }
 
+#popup label {
+  margin-top: 7px;
+}
 /* END POPUP*/
